# prompt_mog

./: .gitignore  README.md  pyproject.toml
assets/model_runtime/: cogview4_cads.json  cogview4_df.json  cogview4_pmog.json  cogview4_short.json  flux_cads.json  flux_df.json  flux_pmog.json  flux_short.json  qwen_cads.json  qwen_df.json  qwen_pmog.json  qwen_short.json  sd3_cads.json  sd3_df.json  sd3_pmog.json  sd3_short.json
configs/: cogview4_6b.json  flux.1_krea_dev.json  qwen_image.json  stable_diffusion_3.5_large.json
configs/processor/: cogview4_6b.json  flux.1_dev.json  flux.1_krea_dev.json  qwen_image.json  stable_diffusion_3.5_large.json
data/lpd_bench/: prompt_002.json  prompt_003.json  prompt_005.json  prompt_007.json  prompt_009.json  prompt_010.json  prompt_011.json  prompt_013.json  prompt_014.json  prompt_015.json  prompt_017.json  prompt_023.json  prompt_024.json  prompt_029.json  prompt_035.json  prompt_036.json  prompt_038.json  prompt_039.json  prompt_042.json  prompt_043.json  prompt_044.json  prompt_045.json  prompt_048.json  prompt_049.json  prompt_050.json  (+457 more)
eval_utils/: dataset.py  eval_diversity.py  eval_lpb.py  vendi.py
gen_utils/: common.py  dataset.py  generate.py  generate_df.py  generate_origin.py  generate_with_gpt.py  generate_with_imagen.py
lpd_eval/: __init__.py  __main__.py  dataset.py  eval.py  eval_diversity.py  eval_semantics.py  print_score.py
misc/: check_number_of_files.py  compute_attention.py  compute_attention_reverse.py  compute_prompt_distance.py  constant.py  data_statistics.py  generate_long_prompt.py  generate_long_prompt_data.py  plot_toy_example.py  post_process_data.py  print_score.py  rewrite_long_prompt.py
pipeline/: __init__.py  common.py  vanilla.py
processor/: __init__.py  cogview_attn_processor.py  common.py  flux_attn_processor.py  qwen_attn_processor.py  sd3_attn_processor.py
script/: gen_image.sh  gen_image_slurm.sh  inference_with_origin.sh  run_diversity_test.sh  scoring_diversity.sh  scoring_lbp.sh  scoring_lpb.sh
scripts/: gen_and_scoring.sh  gen_and_scoring_slurm.sh  gen_image.sh  scoring_diversity.sh  scoring_diversity_slurm.sh  scoring_lpb.sh  scoring_lpb_slurm.sh  scoring_lpd.sh  scoring_lpd_slurm.sh
(+1785 files in other folders)
