[project]
name = "long-prompt"
version = "0.1.0"
description = "[TODO]"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.10.1",
    "diffusers==0.35.1",
    "einops==0.8.1",
    "protobuf==6.31.1",
    "openai==2.4.0",
    "python-dotenv==1.1.1",
    "sentencepiece==0.2.0",
    "tenacity==9.1.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.57.1",
    "tyro==0.9.35",
    "tensorboard==2.20.0",
    "flash-attn==2.8.3",
    "sentence-transformers==5.1.1",
    "spacy==3.8.7",
    "pip==25.2",
    "datasets==4.2.0",
    "google-genai>=1.48.0",
    "aesthetic-predictor-v2-5>=2024.12.18.1",
]

[tool.uv]
no-build-isolation-package = ['flash-attn']

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.11",
    "scienceplots>=2.1.1",
    "hf-xet>=1.1.8",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.7",
]

[tool.ruff]
exclude = [".venv", "data", ".vscode", ".ipynb_checkpoints", ".typings"]
line-length = 110
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
